Update support email and convert "somonda" to "plusdeal"

--- a/resources/lang/fi.json
+++ b/resources/lang/fi.json
@@ -1,5 +1,5 @@
 {
-     "membership_benefit" : "Somonda-hinnat koskevat vain jäseniä. Jäsenyyden hinta on 19,95 €/kk ja jatkuu automaattisesti päättymiseen asti. Voidaan irtisanoa jäsenkauden lopussa. Ensimmäiset 7 päivää ovat ilmaisia - lue lisää eduista .",
+     "membership_benefit" : "PlusDeal-hinnat koskevat vain jäseniä. Jäsenyyden hinta on 19,95 €/kk ja jatkuu automaattisesti päättymiseen asti. Voidaan irtisanoa jäsenkauden lopussa. Ensimmäiset 7 päivää ovat ilmaisia - lue lisää eduista .",
      "buy_now" : "Osta nyt",
      "in_stock_delivery" : "Varastossa - Ilmainen toimitus",
      "your_price" : "Sinun hintasi",
@@ -13,8 +13,8 @@
      "question_here" : "kysymys täällä",
      "delivery" : "Toimitus",
      "delivery_faq" : "Kaikki tuotteet lähetetään samana päivänä, jos tilaat ennen 16. Toimitamme kaikki paketit Post Nordilla ja saat sähköpostiisi seurantanumeron, kun pakettisi on lähetetty. Voit valita haluatko haluat paketin toimitettavan kotiisi tai minkä pakettilaatikon saatat tarvita Haluat sen toimitettavan Joissakin tapauksissa tilaamasi tuote on etävarastossamme. Jos näin on, toimitusaika on jopa 3 -5 päivää tuotteelle.",
-     "touch_with" : "Otanko yhteyttä Somonda?",
-     "touch_faq" : "Olemme valmiina joka arkipäivä klo 10.00-14.00 ja autamme, jos sinulla on kysyttävää. <br><br> Yhteydenotot ovat: <br>support@somonda.com <br> <br>Vastaamme kaikkiin tiedusteluihin 24 tunnin sisällä.",
+     "touch_with" : "Otanko yhteyttä PlusDeal?",
+     "touch_faq" : "Olemme valmiina joka arkipäivä klo 10.00-14.00 ja autamme, jos sinulla on kysyttävää. <br><br> Yhteydenotot ovat: <br>support@plusdeal.fr <br> <br>Vastaamme kaikkiin tiedusteluihin 24 tunnin sisällä.",
      "membership" : "Jäsenyys",
      "membership_price" : "Jäsenyyden hinta",
      "your_basket" : "Oma kori",
@@ -22,7 +22,7 @@
      "product_updated_msg" : "Tuotekori on päivitetty onnistuneesti!",
      "product_removed_msg" : "Tuotekorin poistaminen onnistui!",
      "product_cleared_msg" : "Kaikki ostoskorin tyhjennys onnistui!",
-     "pluszeit_membership" : "Somonda-jäsenyys",
+     "pluszeit_membership" : "PlusDeal-jäsenyys",
      "normal_price" : "Normaali hinta",
      "total" : "Yhteensä",
      "working_days" : "Työpäivät",
@@ -51,18 +51,18 @@
      "order_before" : "TILAA ENNEN",
      "from" : "From",
      "reviews" : "Arvostelut",
-     "review_description" : "Olen ostanut kannettavan tehosekoittimen Somonda. Se toimitettiin 2 päivän kuluttua. Enemmän kuin tyytyväinen heidän palveluunsa. Tulee varmasti käyttämään jatkossa.",
+     "review_description" : "Olen ostanut kannettavan tehosekoittimen PlusDeal. Se toimitettiin 2 päivän kuluttua. Enemmän kuin tyytyväinen heidän palveluunsa. Tulee varmasti käyttämään jatkossa.",
      "hours" : "tuntia",
      "ago" : "sitten",
      "based_on" : "Perustuen",
      "load_more" : "Lataa lisää",
-     "review_one" : "100% tyytyväinen ostokseeni Somonda",
+     "review_one" : "100% tyytyväinen ostokseeni PlusDeal",
      "review_two" : "Super hyvä laatu ja kohtuullinen hinta",
      "review_three" : "Todella hyvä!",
      "review_four" : "Super tyytyväinen! Pikatoimitus",
      "review_five" : "Hyvä tuote ja hyvä palvelu",
      "review_six" : "Tilasin tuotteeni ja se toimitettiin heti seuraavana päivänä 😍",
-     "review_seven" : "Hyvä palvelu. Tulen varmasti ostamaan Somonda uudelleen",
+     "review_seven" : "Hyvä palvelu. Tulen varmasti ostamaan PlusDeal uudelleen",
      "Excellent" : "Erinomainen",
      "happy_customers" : "Onnelliset asiakkaat",
 
@@ -120,7 +120,7 @@
      "discover_reading_3_description" : "Asiakkaana tyytyväisyytesi on taattu",
      "discover_reading_4" : "Yksinoikeustarjous",
      "discover_reading_4_description" : "Vain tällä hetkellä voit saada lahjakortin, jolla voit ostaa lähes mitättömiä.",
-     "purchase_footer" : "Tietojasi käytetään tilauksesi käsittelyyn, kokemuksesi markkinointiin tällä verkkosivustolla ja muihin tietosuojakäytännössämme kuvattuihin tarkoituksiin. Olen lukenut ja hyväksyn somonda.comin ehdot ja ymmärrän, että tällä sivulla osta Tilaan somonda.com-sivuston ja saan sähköpostiuutiskirjeitä. somonda.com on tilausostopalvelu, jonka hinta on 65 € 30 päivän välein 3 päivän kokeilujakson jälkeen, ellei sitä peruuteta ennen kokeilujakson päättymistä. Maksu suoritetaan salatun SSL-yhteyden kautta. Jos tarvitset lisätietoja, ota yhteyttä osoitteeseen support@somonda.com.",
+     "purchase_footer" : "Tietojasi käytetään tilauksesi käsittelyyn, kokemuksesi markkinointiin tällä verkkosivustolla ja muihin tietosuojakäytännössämme kuvattuihin tarkoituksiin. Olen lukenut ja hyväksyn plusdeal.fr in ehdot ja ymmärrän, että tällä sivulla osta Tilaan plusdeal.fr-sivuston ja saan sähköpostiuutiskirjeitä. plusdeal.fr on tilausostopalvelu, jonka hinta on 65 € 30 päivän välein 3 päivän kokeilujakson jälkeen, ellei sitä peruuteta ennen kokeilujakson päättymistä. Maksu suoritetaan salatun SSL-yhteyden kautta. Jos tarvitset lisätietoja, ota yhteyttä osoitteeseen support@plusdeal.fr.",
      "pay_now" : "Maksa nyt"
 
 }
