--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -1,5 +1,5 @@
 {
-    "membership_benefit" : "Les prix Somonda s'appliquent uniquement aux membres. Le prix de l'adhésion est de 19,95 €/mois et continue automatiquement jusqu'à sa résiliation. Peut être résilié à la fin d'une période d'adhésion. Les 7 premiers jours sont gratuits - en savoir plus sur les avantages.",
+    "membership_benefit" : "Les prix PlusDeal s'appliquent uniquement aux membres. Le prix de l'adhésion est de 19,95 €/mois et continue automatiquement jusqu'à sa résiliation. Peut être résilié à la fin d'une période d'adhésion. Les 7 premiers jours sont gratuits - en savoir plus sur les avantages.",
     "buy_now" : "Acheter maintenant",
     "in_stock_delivery" : "En stock - Livraison gratuite",
     "your_price" : "Votre prix",
@@ -13,8 +13,8 @@
     "question_here" : "question ici",
     "delivery" : "Livraison",
     "delivery_faq" : "Tous les produits sont expédiés le jour même si vous commandez avant 16h. Nous livrons tous nos colis avec Post Nord et vous recevrez un e-mail avec un numéro de suivi lorsque votre colis aura été expédié. Vous pouvez choisir si vous souhaitez que le colis soit livré à votre domicile ou dans quelle boîte de colis vous pourriez avoir besoin. dans certains cas, l'article que vous commandez se trouve dans notre entrepôt distant. Si tel est le cas, vous devez vous attendre à un délai de livraison pouvant aller jusqu'à 3 -5 jours pour le produit.",
-    "touch_with" : "Est-ce que je prends contact avec Somonda?",
-    "touch_faq": "Nous sommes prêts tous les jours de la semaine de 10h00 à 14h00 et nous vous aiderons si vous avez des questions. <br><br> Nous pouvons être contactés via : <br>support@somonda.com <br ><br>Nous répondons à toutes les demandes dans les 24 heures.",
+    "touch_with" : "Est-ce que je prends contact avec PlusDeal?",
+    "touch_faq": "Nous sommes prêts tous les jours de la semaine de 10h00 à 14h00 et nous vous aiderons si vous avez des questions. <br><br> Nous pouvons être contactés via : <br>support@plusdeal.fr <br ><br>Nous répondons à toutes les demandes dans les 24 heures.",
     "membership" : "Adhésion",
     "membership_price" : "Prix de l'abonnement",
     "your_basket" : "Votre panier",
@@ -22,7 +22,7 @@
     "product_updated_msg" : "Le panier d'articles a été mis à jour avec succès!",
     "product_removed_msg" : "Le panier d'articles a été supprimé avec succès!",
     "product_cleared_msg" : "Tous les articles du panier ont été effacés avec succès!",
-    "pluszeit_membership" : "Adhésion Somonda",
+    "pluszeit_membership" : "Adhésion PlusDeal",
     "normal_price" : "Prix normal",
     "total" : "Totale",
     "working_days" : "Jours ouvrés",
@@ -35,7 +35,7 @@
     "postal_code" : "Code postal",
     "telephone" : "Téléphone",
     "email" : "E-mail",
-    "terms" : "Il s'agit d'un essai de 7 jours sur l'adhésion à Somonda. Cet abonnement se poursuivra automatiquement après les 7 jours d'essai au prix de 19,95 € par mois et se poursuivra jusqu'à ce que vous annuliez l'abonnement. Vous pouvez annuler en contactant le service clientèle ou en vous connectant avec les informations de connexion que vous recevez par e-mail. Sachez que vous ne pouvez pas vous désabonner dans les 48 premières heures de votre essai.",
+    "terms" : "Il s'agit d'un essai de 7 jours sur l'adhésion à PlusDeal. Cet abonnement se poursuivra automatiquement après les 7 jours d'essai au prix de 19,95 € par mois et se poursuivra jusqu'à ce que vous annuliez l'abonnement. Vous pouvez annuler en contactant le service clientèle ou en vous connectant avec les informations de connexion que vous recevez par e-mail. Sachez que vous ne pouvez pas vous désabonner dans les 48 premières heures de votre essai.",
     "age_terms" : "J'accepte le",
      "terms_and_conditions" : "Termes et conditions",
      "age_term1" : "et que j'ai au moins 18 ans",
@@ -51,19 +51,19 @@
     "order_before" : "COMMANDEZ AVANT",
     "from" : "À partir de",
     "reviews" : "Commentaires",
-    "review_description" : "J'ai acheté un mixeur portable sur Somonda. Je l'ai reçu après 2 jours. Plus que satisfait de leur service. Je l'utiliserai certainement à l'avenir.",
+    "review_description" : "J'ai acheté un mixeur portable sur PlusDeal. Je l'ai reçu après 2 jours. Plus que satisfait de leur service. Je l'utiliserai certainement à l'avenir.",
     "hours" : "heures",
     "ago" : "depuis",
     "based_on" : "Basé sur",
     "load_more" : "Charger plus",
 
-    "review_one" : "100% satisfait de mon achat chez Somonda",
+    "review_one" : "100% satisfait de mon achat chez PlusDeal",
     "review_two" : "Super bonne qualité et un prix raisonnable",
     "review_three" : "Vraiment bien!",
     "review_four" : "Super satisfait! Livraison rapide",
     "review_five" : "Bon produit et bon service",
     "review_six" : "J'ai commandé mon produit et je l'ai fait livrer dès le lendemain 😍",
-    "review_seven" : "Bon service. J'achèterai certainement à nouveau chez Somonda",
+    "review_seven" : "Bon service. J'achèterai certainement à nouveau chez PlusDeal",
     "Excellent" : "Excellente",
     "happy_customers" : "Clients satisfaits",
 
@@ -121,11 +121,11 @@
     "discover_reading_3_description" : "En tant que client, votre satisfaction est garantie",
     "discover_reading_4" : "Offre exclusive",
     "discover_reading_4_description" : "En ce moment seulement, vous pouvez obtenir une carte cadeau pour faire des achats pour presque rien.",
-    "purchase_footer" : "Vos données seront utilisées pour traiter votre commande, commercialiser votre expérience sur ce site Web et à d'autres fins décrites dans notre politique de confidentialité. J'ai lu et j'accepte les termes et conditions de Somonda.com et je comprends qu'avec cet achat, je m'inscris à Somonda.com et recevrai des newsletters par e-mail.  Somonda.com est un service d'achat par abonnement, au prix de 65 € tous les 30 jours, après une période d'essai de 3 jours, sauf annulation avant la fin de la période d'essai. Le paiement s'effectue via une connexion SSL cryptée. Si vous avez besoin de plus d'informations, veuillez nous contacter à support@somonda.com.",
+    "purchase_footer" : "Vos données seront utilisées pour traiter votre commande, commercialiser votre expérience sur ce site Web et à d'autres fins décrites dans notre politique de confidentialité. J'ai lu et j'accepte les termes et conditions de plusdeal.fr et je comprends qu'avec cet achat, je m'inscris à plusdeal.fr et recevrai des newsletters par e-mail.  plusdeal.fr est un service d'achat par abonnement, au prix de 65 € tous les 30 jours, après une période d'essai de 3 jours, sauf annulation avant la fin de la période d'essai. Le paiement s'effectue via une connexion SSL cryptée. Si vous avez besoin de plus d'informations, veuillez nous contacter à support@plusdeal.fr.",
     "pay_now" : "Payez maintenant",
 
     "checkout_title" : "Commencez votre essai de 3 jours maintenant!",
-    "checkout_subtitle" : "Commencez par un essai payant et accédez à toutes les fonctionnalités de somonda.com.",
+    "checkout_subtitle" : "Commencez par un essai payant et accédez à toutes les fonctionnalités de plusdeal.fr.",
     "personal_information" : "Informations personnelles",
     "card_holder_name" : "Nom complet",
     "enter_name" : "Nom du titulaire de la carte",
@@ -141,5 +141,5 @@
     "card_number" : "Numéro de carte",
     "accept" : "j'ai lu et accepté" ,
     "checkout_terms" : "Les termes et conditions ",
-    "checkout_description" : "Vos données seront utilisées pour traiter votre commande, promouvoir votre expérience sur ce site et à d'autres fins décrites dans notre politique de confidentialité. J'ai lu et j'accepte les termes et conditions de ehealthiii.com et je comprends qu'à travers cet achat, je m'inscris à ehealthiii.com et je recevrai des newsletters par e-mail. ehealthiii.com est un service d'abonnement au shopping, au prix de €67 tous les 30 jours, après une période d'essai de 3 jours, sauf annulation avant la fin de l'essai. de 3 jours à €2.45. Le paiement s'effectue via une connexion SSL cryptée. Si vous avez besoin de plus d'informations, veuillez nous contacter à support@somonda.com."
+    "checkout_description" : "Vos données seront utilisées pour traiter votre commande, promouvoir votre expérience sur ce site et à d'autres fins décrites dans notre politique de confidentialité. J'ai lu et j'accepte les termes et conditions de ehealthiii.com et je comprends qu'à travers cet achat, je m'inscris à ehealthiii.com et je recevrai des newsletters par e-mail. ehealthiii.com est un service d'abonnement au shopping, au prix de €67 tous les 30 jours, après une période d'essai de 3 jours, sauf annulation avant la fin de l'essai. de 3 jours à €2.45. Le paiement s'effectue via une connexion SSL cryptée. Si vous avez besoin de plus d'informations, veuillez nous contacter à support@plusdeal.fr."
 }
