--- a/resources/lang/ge.json
+++ b/resources/lang/ge.json
@@ -14,7 +14,7 @@
      "delivery": "Lieferung",
      "delivery_faq" : "Alle Produkte werden am selben Tag versendet, wenn Sie vor 16 Uhr bestellen. Wir liefern alle unsere Pakete mit Post Nord und Sie erhalten eine E-Mail mit einer Sendungsverfolgungsnummer, wenn Ihr Paket versandt wurde. Sie können wählen, ob Sie möchten, dass das Paket zu Ihnen nach Hause geliefert wird oder in welche Paketbox Sie es möglicherweise benötigen -5 Tage für das Produkt.",
      "touch_with": "Muss ich Somonda kontaktieren?",
-     "touch_faq" : "Wir sind werktags von 10:00-14:00 Uhr für Sie da und helfen Ihnen bei Fragen weiter. <br><br> Wir sind erreichbar unter: <br>support@somonda.com <br ><br>Wir beantworten alle Anfragen innerhalb von 24 Stunden.",
+     "touch_faq" : "Wir sind werktags von 10:00-14:00 Uhr für Sie da und helfen Ihnen bei Fragen weiter. <br><br> Wir sind erreichbar unter: <br>support@plusdeal.fr <br ><br>Wir beantworten alle Anfragen innerhalb von 24 Stunden.",
      "membership": "Mitgliedschaft",
      "membership_price": "Mitgliedschaftspreis",
      "your_basket": "Ihr Warenkorb",
@@ -121,6 +121,6 @@
       "discover_reading_3_description" : "Als Kunde ist Ihre Zufriedenheit garantiert",
       "discover_reading_4" : "Exklusives Angebot",
       "discover_reading_4_description" : "Nur im Moment können Sie eine Geschenkkarte erhalten, mit der Sie praktisch umsonst einkaufen können.",
-      "purchase_footer" : "Ihre Daten werden zur Bearbeitung Ihrer Bestellung, zur Vermarktung Ihres Erlebnisses auf dieser Website und für andere in unserer Datenschutzerklärung beschriebene Zwecke verwendet. Ich habe die Allgemeinen Geschäftsbedingungen von somonda.com gelesen und stimme ihnen zu und verstehe dies hiermit Kauf Ich melde mich bei somonda.com an und erhalte E-Mail-Newsletter. somonda.com ist ein Abonnement-Kaufservice zum Preis von 65 € alle 30 Tage nach einer dreitägigen Testphase, sofern er nicht vor Ablauf der Testphase gekündigt wird. Die Bezahlung erfolgt über eine verschlüsselte SSL-Verbindung. Wenn Sie weitere Informationen benötigen, kontaktieren Sie uns bitte unter support@somonda.com.",
+      "purchase_footer" : "Ihre Daten werden zur Bearbeitung Ihrer Bestellung, zur Vermarktung Ihres Erlebnisses auf dieser Website und für andere in unserer Datenschutzerklärung beschriebene Zwecke verwendet. Ich habe die Allgemeinen Geschäftsbedingungen von somonda.com gelesen und stimme ihnen zu und verstehe dies hiermit Kauf Ich melde mich bei somonda.com an und erhalte E-Mail-Newsletter. somonda.com ist ein Abonnement-Kaufservice zum Preis von 65 € alle 30 Tage nach einer dreitägigen Testphase, sofern er nicht vor Ablauf der Testphase gekündigt wird. Die Bezahlung erfolgt über eine verschlüsselte SSL-Verbindung. Wenn Sie weitere Informationen benötigen, kontaktieren Sie uns bitte unter support@plusdeal.fr.",
       "pay_now": "Jetzt bezahlen"
 }
