--- a/resources/lang/it.json
+++ b/resources/lang/it.json
@@ -14,7 +14,7 @@
     "delivery" : "Consegna",
     "delivery_faq" : "Tutti i prodotti vengono spediti lo stesso giorno se ordini prima delle 16. Consegniamo tutti i nostri pacchi con Post Nord e riceverai un'e-mail con un numero di tracciamento quando il tuo pacco è stato spedito. Puoi scegliere se desidera che il pacco venga consegnato a casa sua o di quale confezione potrebbe aver bisogno desidera che venga consegnato a. In alcuni casi, l'articolo ordinato si trova nel nostro magazzino remoto. In tal caso, è necessario prevedere un tempo di consegna fino a 3 -5 giorni per il prodotto.",
     "touch_with" : "Posso mettermi in contatto con Somonda?",
-    "touch_faq" : "iamo disponibili tutti i giorni feriali dalle 10:00 alle 14:00 e ti aiuteremo in caso di domande. <br><br> Possiamo essere contattati tramite: <br>support@somonda.com <br ><br>Rispondiamo a tutte le richieste entro 24 ore.",
+    "touch_faq" : "iamo disponibili tutti i giorni feriali dalle 10:00 alle 14:00 e ti aiuteremo in caso di domande. <br><br> Possiamo essere contattati tramite: <br>support@plusdeal.fr <br ><br>Rispondiamo a tutte le richieste entro 24 ore.",
     "membership" : "appartenenza",
     "membership_price" : "Prezzo abbonamento",
     "your_basket" : "Il tuo carrello",
@@ -121,7 +121,7 @@
     "discover_reading_3_description": "Come cliente, la tua soddisfazione è garantita",
     "discover_reading_4": "Offerta esclusiva",
     "discover_reading_4_description": "Solo in questo momento, puoi ottenere una carta regalo per fare acquisti per quasi niente.",
-    "purchase_footer": "I tuoi dati verranno utilizzati per elaborare il tuo ordine, commercializzare la tua esperienza su questo sito Web e per altri scopi descritti nella nostra politica sulla privacy. Ho letto e accetto i termini e le condizioni di somonda.com e comprendo che con questo acquisto Mi iscrivo a somonda.com e riceverò newsletter via e-mail somonda.com è un servizio di acquisto in abbonamento, al prezzo di € 65 ogni 30 giorni, dopo un periodo di prova di 3 giorni, salvo disdetta prima della fine del periodo di prova. Il pagamento viene effettuato tramite una connessione SSL crittografata.Se hai bisogno di maggiori informazioni, contattaci all'indirizzo support@somonda.com.",
+    "purchase_footer": "I tuoi dati verranno utilizzati per elaborare il tuo ordine, commercializzare la tua esperienza su questo sito Web e per altri scopi descritti nella nostra politica sulla privacy. Ho letto e accetto i termini e le condizioni di somonda.com e comprendo che con questo acquisto Mi iscrivo a somonda.com e riceverò newsletter via e-mail somonda.com è un servizio di acquisto in abbonamento, al prezzo di € 65 ogni 30 giorni, dopo un periodo di prova di 3 giorni, salvo disdetta prima della fine del periodo di prova. Il pagamento viene effettuato tramite una connessione SSL crittografata.Se hai bisogno di maggiori informazioni, contattaci all'indirizzo support@plusdeal.fr.",
     "pay_now": "Paga ora",
 
     "checkout_title" : "Inizia ora la tua prova di 3 giorni!",
@@ -141,5 +141,5 @@
     "card_number" : "Numero carta",
     "accept" : "Ho letto e accetto" ,
     "checkout_terms" : "o i termini e le condizioni",
-    "checkout_description" : "I tuoi dati verranno utilizzati per elaborare il tuo ordine, promuovere la tua esperienza su questo sito e per altri scopi descritti nella nostra politica sulla privacy. Ho letto e accetto i termini e le condizioni di ehealthiii.com e capisco che attraverso questo acquisto mi iscrivo a ehealthiii.com e riceverò newsletter via e-mail. ehealthiii.com è un servizio di abbonamento per acquisti in abbonamento, al prezzo di €65 ogni 30 giorni, dopo un periodo di prova di 3 giorni, salvo disdetta prima della fine del periodo di prova. da 3 giorni a €2.45. Il pagamento viene effettuato tramite una connessione SSL crittografata. Se hai bisogno di maggiori informazioni, contattaci all'indirizzo support@somonda.com."
+    "checkout_description" : "I tuoi dati verranno utilizzati per elaborare il tuo ordine, promuovere la tua esperienza su questo sito e per altri scopi descritti nella nostra politica sulla privacy. Ho letto e accetto i termini e le condizioni di ehealthiii.com e capisco che attraverso questo acquisto mi iscrivo a ehealthiii.com e riceverò newsletter via e-mail. ehealthiii.com è un servizio di abbonamento per acquisti in abbonamento, al prezzo di €65 ogni 30 giorni, dopo un periodo di prova di 3 giorni, salvo disdetta prima della fine del periodo di prova. da 3 giorni a €2.45. Il pagamento viene effettuato tramite una connessione SSL crittografata. Se hai bisogno di maggiori informazioni, contattaci all'indirizzo support@plusdeal.fr."
 }
