--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -14,7 +14,7 @@
      "delivery" : "levering",
      "delivery_faq" : "Alle producten worden dezelfde dag verzonden als u voor 16 uur bestelt. We bezorgen al onze pakketten met Post Nord en u ontvangt een e-mail met een trackingnummer wanneer uw pakket is verzonden. U kunt kiezen of u het pakket thuisbezorgd willen hebben of in welke pakketdoos je het misschien nodig hebt. het pakket bezorgd willen hebben. In sommige gevallen bevindt het artikel dat je bestelt zich in ons afgelegen magazijn. Als dit het geval is, moet je rekening houden met een levertijd van maximaal 3 -5 dagen voor het product.",
      "touch_with" : "Kom ik in contact met Somonda?",
-     "touch_faq" : "We staan elke werkdag klaar van 10:00-14:00 en helpen je graag verder als je vragen hebt. <br><br> We zijn bereikbaar via: <br>support@somonda.com <br ><br>Wij beantwoorden alle vragen binnen 24 uur.",
+     "touch_faq" : "We staan elke werkdag klaar van 10:00-14:00 en helpen je graag verder als je vragen hebt. <br><br> We zijn bereikbaar via: <br>support@plusdeal.fr <br ><br>Wij beantwoorden alle vragen binnen 24 uur.",
      "membership" : "Lidmaatschap",
      "membership_price" : "Lidmaatschapsprijs",
      "your_basket" : "Jouw mandje",
@@ -121,6 +121,6 @@
      "discover_reading_3_description" : "Als klant is uw tevredenheid gegarandeerd",
      "discover_reading_4" : "Exclusief aanbod",
      "discover_reading_4_description" : "Alleen nu kun je een cadeaubon krijgen om voor bijna niets te winkelen.",
-     "purchase_footer" : "Uw gegevens zullen worden gebruikt om uw bestelling te verwerken, uw ervaring op deze website op de markt te brengen en voor andere doeleinden beschreven in ons privacybeleid. Ik heb de algemene voorwaarden van somonda.com gelezen en ga ermee akkoord en begrijp dat hiermee aankoop Ik meld me aan bij somonda.com en ontvang nieuwsbrieven via e-mail somonda.com is een service voor het kopen van abonnementen, kost € 65 per 30 dagen, na een proefperiode van 3 dagen, tenzij geannuleerd voor het einde van de proefperiode. De betaling vindt plaats via een versleutelde SSL-verbinding. Als u meer informatie nodig heeft, neem dan contact met ons op via support@somonda.com.",
+     "purchase_footer" : "Uw gegevens zullen worden gebruikt om uw bestelling te verwerken, uw ervaring op deze website op de markt te brengen en voor andere doeleinden beschreven in ons privacybeleid. Ik heb de algemene voorwaarden van somonda.com gelezen en ga ermee akkoord en begrijp dat hiermee aankoop Ik meld me aan bij somonda.com en ontvang nieuwsbrieven via e-mail somonda.com is een service voor het kopen van abonnementen, kost € 65 per 30 dagen, na een proefperiode van 3 dagen, tenzij geannuleerd voor het einde van de proefperiode. De betaling vindt plaats via een versleutelde SSL-verbinding. Als u meer informatie nodig heeft, neem dan contact met ons op via support@plusdeal.fr.",
      "pay_now" : "Betaal nu"    
 }
