--- a/resources/lang/no.json
+++ b/resources/lang/no.json
@@ -14,7 +14,7 @@
      "delivery" : "Levering",
      "delivery_faq" : "Alle produkter sendes samme dag dersom du bestiller før 16. Vi leverer alle våre pakker med Post Nord og du vil motta en e-post med sporingsnummer når pakken din er sendt. Du kan velge om du ønsker pakken levert hjem til deg eller hvilken pakkeboks du måtte trenge ønsker den levert til I noen tilfeller ligger varen du bestiller på vårt fjernlager Hvis dette er tilfelle må du regne med en leveringstid på inntil 3 -5 dager for produktet.",
      "touch_with" : "Kommer jeg i kontakt med Somonda?",
-     "touch_faq" : "Vi er klare alle hverdager fra 10:00-14:00 og hjelper deg hvis du har spørsmål. <br><br> Vi kan kontaktes via: <br>support@somonda.com <br ><br>Vi svarer på alle henvendelser innen 24 timer.",
+     "touch_faq" : "Vi er klare alle hverdager fra 10:00-14:00 og hjelper deg hvis du har spørsmål. <br><br> Vi kan kontaktes via: <br>support@plusdeal.fr <br ><br>Vi svarer på alle henvendelser innen 24 timer.",
      "membership" : "Medlemskap",
      "membership_price" : "Medlemspris",
      "your_basket" : "Din kurv",
@@ -120,6 +120,6 @@
      "discover_reading_3_description" : "Som kunde er din tilfredshet garantert",
      "discover_reading_4" : "Eksklusivt tilbud",
      "discover_reading_4_description" : "Bare akkurat nå kan du få et gavekort for å handle for nesten ingenting.",
-     "purchase_footer" : "Dine data vil bli brukt til å behandle bestillingen din, markedsføre opplevelsen din på denne nettsiden og til andre formål beskrevet i vår personvernerklæring. Jeg har lest og godtar vilkårene og betingelsene til somonda.com og forstår at med dette kjøp Jeg registrerer meg på somonda.com og vil motta nyhetsbrev på e-post. somonda.com er en abonnementskjøpstjeneste, priset til €65 hver 30. dag, etter en 3-dagers prøveperiode, med mindre avbestilling før slutten av prøveperioden. Betaling skjer via en kryptert SSL-tilkobling. Hvis du trenger mer informasjon, vennligst kontakt oss på support@somonda.com.",
+     "purchase_footer" : "Dine data vil bli brukt til å behandle bestillingen din, markedsføre opplevelsen din på denne nettsiden og til andre formål beskrevet i vår personvernerklæring. Jeg har lest og godtar vilkårene og betingelsene til somonda.com og forstår at med dette kjøp Jeg registrerer meg på somonda.com og vil motta nyhetsbrev på e-post. somonda.com er en abonnementskjøpstjeneste, priset til €65 hver 30. dag, etter en 3-dagers prøveperiode, med mindre avbestilling før slutten av prøveperioden. Betaling skjer via en kryptert SSL-tilkobling. Hvis du trenger mer informasjon, vennligst kontakt oss på support@plusdeal.fr.",
      "pay_now" : "Betal nå"
 }
