--- a/resources/lang/sv.json
+++ b/resources/lang/sv.json
@@ -14,7 +14,7 @@
     "delivery" : "Leverans",
     "delivery_faq" : "Alla produkter skickas samma dag om du beställer innan 16. Vi levererar alla våra paket med Post Nord och du får ett e-postmeddelande med ett spårningsnummer när ditt paket har skickats. Du kan välja om du vill ha paketet levererat hem till dig eller vilken paketkartong du kan behöva vill ha det levererat till I vissa fall finns varan du beställer på vårt fjärrlager Om så är fallet får du räkna med en leveranstid på upp till 3 -5 dagar för produkten.",
     "touch_with" : "Kommer jag i kontakt med Somonda?",
-    "touch_faq" : "Vi är redo alla vardagar från 10:00-14:00 och hjälper dig om du har några frågor. <br><br> Vi kan kontaktas via: <br>support@somonda.com <br ><br>Vi svarar på alla förfrågningar inom 24 timmar.",
+    "touch_faq" : "Vi är redo alla vardagar från 10:00-14:00 och hjälper dig om du har några frågor. <br><br> Vi kan kontaktas via: <br>support@plusdeal.fr <br ><br>Vi svarar på alla förfrågningar inom 24 timmar.",
     "membership" : "Medlemskap",
     "membership_price" : "Medlemspris",
     "your_basket" : "Din korg",
@@ -120,7 +120,7 @@
     "discover_reading_3_description" : "Som kund är din tillfredsställelse garanterad",
     "discover_reading_4" : "Exklusivt erbjudande",
     "discover_reading_4_description" : "Endast just nu kan du få ett presentkort för att handla för nästan ingenting.",
-    "purchase_footer" : "Din data kommer att användas för att behandla din beställning, marknadsföra din upplevelse på denna webbplats och för andra ändamål som beskrivs i vår integritetspolicy. Jag har läst och godkänner villkoren för somonda.com och förstår att med detta köp Jag registrerar mig på somonda.com och kommer att få nyhetsbrev via e-post somonda.com är en prenumerationsköpstjänst, prissatt till 65 € var 30:e dag, efter en 3-dagars provperiod, såvida den inte avbryts före utgången av provperioden. Betalning sker via en krypterad SSL-anslutning. Om du behöver mer information, vänligen kontakta oss på support@somonda.com.",
+    "purchase_footer" : "Din data kommer att användas för att behandla din beställning, marknadsföra din upplevelse på denna webbplats och för andra ändamål som beskrivs i vår integritetspolicy. Jag har läst och godkänner villkoren för somonda.com och förstår att med detta köp Jag registrerar mig på somonda.com och kommer att få nyhetsbrev via e-post somonda.com är en prenumerationsköpstjänst, prissatt till 65 € var 30:e dag, efter en 3-dagars provperiod, såvida den inte avbryts före utgången av provperioden. Betalning sker via en krypterad SSL-anslutning. Om du behöver mer information, vänligen kontakta oss på support@plusdeal.fr.",
     "pay_now" : "Betala nu"
 }
  
