--- a/resources/lang/da.json
+++ b/resources/lang/da.json
@@ -1,5 +1,5 @@
 {
-    "membership_benefit" : "Somonda-priser gælder kun for medlemmer. Prisen for medlemskab er 19,95 kr/md. og fortsætter automatisk indtil opsigelse. Kan opsiges ved udløbet af en medlemsperiode. De første 7 dage er gratis – læs mere om fordelene.",
+    "membership_benefit" : "PlusDeal-priser gælder kun for medlemmer. Prisen for medlemskab er 19,95 kr/md. og fortsætter automatisk indtil opsigelse. Kan opsiges ved udløbet af en medlemsperiode. De første 7 dage er gratis – læs mere om fordelene.",
     "buy_now" : "Køb nu",
     "in_stock_delivery" : "På lager - Gratis fragt",
     "your_price" : "Din pris",
@@ -13,8 +13,8 @@
     "question_here" : "spørgsmål her",
     "delivery" : "Levering",
     "delivery_faq" : "Alle produkter bliver afsendt samme dag hvis du bestiller inden kl. 16. Vi lever alle vores pakker med Post Nord og du modtager en e-mail med trackingnummer når din pakke er afsendt. Du kan selv vælge om du vil have pakken leveret hjemme hos dig selv eller hvilken pakkeboks som du evt. vil have den leveret til. I nogle tilfælde er varen du bestiller på vores fjern lager. Hvis dette er tilfældet må du forvente en leveringstid op til 3-5 dage på produktet.",
-    "touch_with" : "kommer jeg i kontakt med Somonda?",
-    "touch_faq" : "Vi sidder klar alle hverdage fra 10:00-14:00 og hjælper dig hvis du har nogle spørgsmål.<br> Vi kan kontaktes via:<br><br>support@somonda.com <br><br>Vi besvarer alle henvendelser indenfor 24 timer.",
+    "touch_with" : "kommer jeg i kontakt med PlusDeal?",
+    "touch_faq" : "Vi sidder klar alle hverdage fra 10:00-14:00 og hjælper dig hvis du har nogle spørgsmål.<br> Vi kan kontaktes via:<br><br>support@plusdeal.fr <br><br>Vi besvarer alle henvendelser indenfor 24 timer.",
     "membership_price" : "Medlemspris",
     "membership" : "Medlemskab",
     "your_basket" : "Din kurv",
@@ -22,7 +22,7 @@
     "product_updated_msg" : "Varevognen er opdateret med succes!",
     "product_removed_msg" : "Varevogn fjernes med succes!",
     "product_cleared_msg" : "Alle varevogn ryddes med succes!",
-    "pluszeit_membership" : "Somonda-medlemskab",
+    "pluszeit_membership" : "PlusDeal-medlemskab",
     "normal_price" : "Normal pris",
     "total" : "Total",
     "working_days" : "Arbejdsdage",
@@ -35,7 +35,7 @@
     "postal_code" : "Postnummer",
     "telephone" : "Telefon",
     "email" : "E-mail",
-    "terms" : "Dette er en 7-dages prøveperiode på Somonda-medlemskabet. Dette medlemskab fortsætter automatisk efter 7 dages prøveperiode til prisen kr179 om måneden og fortsætter, indtil du opsiger medlemskabet. Du kan annullere ved at kontakte kundesupport eller logge ind med de loginoplysninger, du får på e-mail. Vær opmærksom på, at du ikke kan afmelde dig inden for de første 48 timer efter din prøveperiode.",
+    "terms" : "Dette er en 7-dages prøveperiode på PlusDeal-medlemskabet. Dette medlemskab fortsætter automatisk efter 7 dages prøveperiode til prisen kr179 om måneden og fortsætter, indtil du opsiger medlemskabet. Du kan annullere ved at kontakte kundesupport eller logge ind med de loginoplysninger, du får på e-mail. Vær opmærksom på, at du ikke kan afmelde dig inden for de første 48 timer efter din prøveperiode.",
     "age_terms" : "Jeg accepterer",
     "terms_and_conditions" : "Vilkår og betingelser",
     "age_term1" : "og at jeg er mindst 18 år",
@@ -51,18 +51,18 @@
     "order_before" : "BESTIL FØR",
     "from" : "Fra",
     "reviews" : "Anmeldelser",
-    "review_description" : "Jeg har købt en bærbar blender på Somonda. Fik den leveret efter 2 dage. Mere end tilfreds med deres service. Vil helt sikkert bruge det i fremtiden.",
+    "review_description" : "Jeg har købt en bærbar blender på PlusDeal. Fik den leveret efter 2 dage. Mere end tilfreds med deres service. Vil helt sikkert bruge det i fremtiden.",
     "hours" : "timer",
     "ago" : "siden",
     "based_on" : "Baseret på",
     "load_more" : "Indlæs mere",
-    "review_one" : "100% tilfreds med mit køb hos Somonda",
+    "review_one" : "100% tilfreds med mit køb hos PlusDeal",
     "review_two" : "Super god kvalitet og en fornuftig pris",
     "review_three" : "Helt vildt god!",
     "review_four" : "Super tilfreds ! Hurtig levering",
     "review_five" : "Dejligt produkt og god service",
     "review_six" : "Bestilte mit produkt og fik det leveret allerede dagen efter 😍",
-    "review_seven" : "God service. Handler helt sikkert hos Somonda igen",
+    "review_seven" : "God service. Handler helt sikkert hos PlusDeal igen",
     "Excellent" : "Fremragende",
     "happy_customers" : "Glade kunder",
 
@@ -120,7 +120,7 @@
     "discover_reading_3_description" : "Som kunde er din tilfredshed garanteret",
     "discover_reading_4" : "Eksklusivt tilbud",
     "discover_reading_4_description" : "Kun lige nu kan du få et gavekort til at handle for næsten ingenting.",
-    "purchase_footer" : "Dine data vil blive brugt til at behandle din ordre, markedsføre din oplevelse på denne hjemmeside og til andre formål beskrevet i vores privatlivspolitik. Jeg har læst og accepterer vilkårene og betingelserne for somonda.com og forstår, at med denne køb Jeg tilmelder mig somonda.com og vil modtage nyhedsbreve via e-mail. somonda.com er en abonnementskøbstjeneste, prissat til 65 kr hver 30. dag efter en 3-dages prøveperiode, medmindre det annulleres inden prøveperiodens udløb. Betaling sker via en krypteret SSL-forbindelse. Hvis du har brug for mere information, så kontakt os venligst på support@somonda.com.",
+    "purchase_footer" : "Dine data vil blive brugt til at behandle din ordre, markedsføre din oplevelse på denne hjemmeside og til andre formål beskrevet i vores privatlivspolitik. Jeg har læst og accepterer vilkårene og betingelserne for plusdeal.com og forstår, at med denne køb Jeg tilmelder mig plusdeal.com og vil modtage nyhedsbreve via e-mail. plusdeal.com er en abonnementskøbstjeneste, prissat til 65 kr hver 30. dag efter en 3-dages prøveperiode, medmindre det annulleres inden prøveperiodens udløb. Betaling sker via en krypteret SSL-forbindelse. Hvis du har brug for mere information, så kontakt os venligst på support@plusdeal.fr.",
     "pay_now" : "Betal nu",
     "add" : "Tilføj",
     "quantity" : "Antal"
