--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,5 +1,5 @@
 {
-     "membership_benefit" : "Somonda prices only apply to members. The price for membership is 179 kr/mo and continues automatically until terminated. Can be terminated at the end of a membership period. The first 7 days are free - read more about the benefits.",
+     "membership_benefit" : "PlusDeal prices only apply to members. The price for membership is 179 kr/mo and continues automatically until terminated. Can be terminated at the end of a membership period. The first 7 days are free - read more about the benefits.",
      "buy_now" : "Buy now",
      "in_stock_delivery" : "In stock - Free shipping",
      "your_price" : "Your price",
@@ -13,8 +13,8 @@
      "question_here" : "question here",
      "delivery" : "Delivery",
      "delivery_faq" : "All products are shipped the same day if you order before 16. We deliver all our packages with Post Nord and you will receive an e-mail with a tracking number when your package has been dispatched. You can choose whether you want the package delivered to your home or which package box you may need. want it delivered to. In some cases, the item you order is in our remote warehouse. If this is the case, you must expect a delivery time of up to 3-5 days for the product.",
-     "touch_with" : "Do I get in touch with Somonda?",
-     "touch_faq" : "We are ready every weekday from 10:00-14:00 and will help you if you have any questions. <br><br> We can be contacted via: <br>support@somonda.com <br><br>We answer all inquiries within 24 hours.",
+     "touch_with" : "Do I get in touch with PlusDeal?",
+     "touch_faq" : "We are ready every weekday from 10:00-14:00 and will help you if you have any questions. <br><br> We can be contacted via: <br>support@plusdeal.fr <br><br>We answer all inquiries within 24 hours.",
      "membership" : "Membership",
      "membership_price" : "Membership price",
      "your_basket" : "Basket",
@@ -22,7 +22,7 @@
      "product_updated_msg" : "Item Cart is Updated Successfully!",
      "product_removed_msg" : "Item Cart Remove Successfully!",
      "product_cleared_msg" : "All Item Cart Clear Successfully!",
-     "pluszeit_membership" : "Somonda membership",
+     "pluszeit_membership" : "PlusDeal membership",
      "normal_price" : "Normal Price",
      "total" : "Total",
      "working_days" : "Working days",
@@ -35,7 +35,7 @@
      "postal_code" : "Postal code",
      "telephone" : "Telephone",
      "email" : "Email",
-     "terms" : "This is a 7-days trial on the Somonda membership. This membership will automatically continue after the 7 days trial at the price 179 kr monthly and will continue until you cancel the membership. You can cancel by contacting customer support or login with the login information you get on email. Be aware that you cannot unsubscribe within the first 48 hours of your trial.",
+     "terms" : "This is a 7-days trial on the PlusDeal membership. This membership will automatically continue after the 7 days trial at the price 179 kr monthly and will continue until you cancel the membership. You can cancel by contacting customer support or login with the login information you get on email. Be aware that you cannot unsubscribe within the first 48 hours of your trial.",
      "age_terms" : "I accept the",
      "terms_and_conditions" : "Terms and Conditions",
      "age_term1" : "and that I am at least 18 years old",
@@ -51,18 +51,18 @@
      "order_before" : "ORDER BEFORE",
      "from" : "From",
      "reviews" : "Reviews",
-     "review_description" : "Jeg har købt en bærbar blender på Somonda. Fik den leveret efter 2 dage. Mere end tilfreds med deres service. Vil helt sikkert bruge det i fremtiden.",
+     "review_description" : "Jeg har købt en bærbar blender på PlusDeal. Fik den leveret efter 2 dage. Mere end tilfreds med deres service. Vil helt sikkert bruge det i fremtiden.",
      "hours" : "hours",
      "ago" : "ago",
      "based_on" : "Based on",
      "load_more" : "Load more",
-     "review_one" : "100% satisfied with my purchase from Somonda",
+     "review_one" : "100% satisfied with my purchase from PlusDeal",
      "review_two" : "Super good quality and a reasonable price",
      "review_three" : "Really good!",
      "review_four" : "Super satisfied! Fast delivery",
      "review_five" : "Nice product and good service",
      "review_six" : "Ordered my product and had it delivered the very next day 😍",
-     "review_seven" : "Good service. Will definitely shop at Somonda again",
+     "review_seven" : "Good service. Will definitely shop at PlusDeal again",
      "Excellent" : "Excellent",
      "happy_customers" : "Happy Customers",
 
@@ -120,11 +120,11 @@
      "discover_reading_3_description" : "As a customer, your satisfaction is guaranteed",
      "discover_reading_4" : "Exclusive offer",
      "discover_reading_4_description" : "Right now only, you can get a gift card to shop for next to nothing.",
-     "purchase_footer" : "Your data will be used to process your order, market your experience on this website and for other purposes described in our privacy policy. I have read and agree to the terms and conditions of somonda.com and understand that with this purchase I am signing up to somonda.com and will receive email newsletters. somonda.com is a subscription purchase service, priced at kr65 every 30 days, after a 3-day trial period, unless canceled before the end of the trial period. Payment is made via an encrypted SSL connection. If you need more information, please contact us at support@somonda.com.",
+     "purchase_footer" : "Your data will be used to process your order, market your experience on this website and for other purposes described in our privacy policy. I have read and agree to the terms and conditions of plusdeal.fr and understand that with this purchase I am signing up to plusdea.fr and will receive email newsletters. plusdeal.fr is a subscription purchase service, priced at kr65 every 30 days, after a 3-day trial period, unless canceled before the end of the trial period. Payment is made via an encrypted SSL connection. If you need more information, please contact us at support@plusdeal.fr.",
      "pay_now" : "Pay now",
 
      "checkout_title" : "Start your 3 day trial now!",
-     "checkout_subtitle" : "Start out with a paid trial and get access to all the features of somonda.com.",
+     "checkout_subtitle" : "Start out with a paid trial and get access to all the features of plusdeal.fr.",
      "personal_information" : "Personal Information",
      "card_holder_name" : "Card holder name",
      "enter_name" : "Enter your full name...",
@@ -140,7 +140,8 @@
      "card_number" : "Card number",
      "accept" : "I accept" ,
      "checkout_terms" : "the terms and conditions",
-     "checkout_description" : "Your data will be used to process your order, promote your experience on this site and for other purposes described in our privacy policy. I have read and agree to the ehealthiii.com terms and conditions and understand that through this purchase I am signing up for ehealthiii.com and will receive email newsletters. ehealthiii.com is a subscription-based shopping membership service, priced at kr65 every 30 day, after a 3-day trial period, unless canceled before the trial ends. from 3 days to 2.95kr. Payment is made via an encrypted SSL connection. If you need more information, please contact us at support@somonda.com.",
+     "checkout_description" : "Your data will be used to process your order, promote your experience on this site and for other purposes described in our privacy policy. I have read and agree to the ehealthiii.com terms and conditions and understand that through this purchase I am signing up for ehealthiii.com and will receive email newsletters. ehealthiii.com is a subscription-based shopping membership service, priced at kr65 every 30 day, after a 3-day trial period, unless canceled before the trial ends. from 3 days to 2.95kr. Payment is made via an encrypted SSL connection. If you need more information, please contact us at support@plusdeal.fr.",
      "add" : "add",
      "quantity" : "quantity"
+     
 }
