Convert 179 kr to  €19.95

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,5 +1,5 @@
 {
-     "membership_benefit" : "PlusDeal prices only apply to members. The price for membership is 179 kr/mo and continues automatically until terminated. Can be terminated at the end of a membership period. The first 7 days are free - read more about the benefits.",
+     "membership_benefit" : "PlusDeal prices only apply to members. The price for membership is €19.95/mo and continues automatically until terminated. Can be terminated at the end of a membership period. The first 7 days are free - read more about the benefits.",
      "buy_now" : "Buy now",
      "in_stock_delivery" : "In stock - Free shipping",
      "your_price" : "Your price",
@@ -35,7 +35,7 @@
      "postal_code" : "Postal code",
      "telephone" : "Telephone",
      "email" : "Email",
-     "terms" : "This is a 7-days trial on the PlusDeal membership. This membership will automatically continue after the 7 days trial at the price 179 kr monthly and will continue until you cancel the membership. You can cancel by contacting customer support or login with the login information you get on email. Be aware that you cannot unsubscribe within the first 48 hours of your trial.",
+     "terms" : "This is a 7-days trial on the PlusDeal membership. This membership will automatically continue after the 7 days trial at the price €19.95 monthly and will continue until you cancel the membership. You can cancel by contacting customer support or login with the login information you get on email. Be aware that you cannot unsubscribe within the first 48 hours of your trial.",
      "age_terms" : "I accept the",
      "terms_and_conditions" : "Terms and Conditions",
      "age_term1" : "and that I am at least 18 years old",
